--- a/express/code/blocks/toc-seo/toc-seo.css
+++ b/express/code/blocks/toc-seo/toc-seo.css
@@ -292,6 +292,7 @@ main .toc-v2-content .toc-v2-link:focus:not(:focus-visible) {
     padding-left: var(--spacing-600);
     background: var(--color-gray-100);
     border: none;
+    border-radius: 8px;
     overflow: visible;
     z-index: 1;
   }
@@ -323,7 +324,6 @@ main .toc-v2-content .toc-v2-link:focus:not(:focus-visible) {
 
   .toc-v2-social-icons {
     padding: var(--spacing-300) var(--spacing-300);
-    border-top: 1px solid #e0e0e0;
   }
 }
 
