ensure open / close toggle works

--- a/express/code/blocks/toc-seo/toc-seo.css
+++ b/express/code/blocks/toc-seo/toc-seo.css
@@ -34,6 +34,12 @@
     text-align: left;
     outline: none;
     user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  .toc-v2-title * {
+    pointer-events: none;
   }
   
   .toc-v2-title:focus-visible {
