--- a/express/code/blocks/mobile-fork-button/mobile-fork-button.css
+++ b/express/code/blocks/mobile-fork-button/mobile-fork-button.css
@@ -1,6 +1,6 @@
 main  .floating-button-wrapper.mobile-fork-button, main .mobile-fork-button {
     z-index: 10;
-    --mfb-font-size: 16px;
+    --mfb-font-size: var(--body-font-size-m);
 }
 
 .feds-localnav--active ~ main .floating-button-wrapper.mobile-fork-button {
@@ -39,12 +39,12 @@ main  .mobile-fork-button .floating-button.block {
     background-color: var(--color-white);
     border-radius: 28px;
     box-shadow: 0px 0px 12px 0px #00000029;
-    padding: 16px;
+    padding: var(--spacing-300);
     width: calc(100% - 16px);
     margin: 5px;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: var(--spacing-100);
 }
 
 main .mobile-gating-row {
@@ -57,7 +57,7 @@ main .mobile-gating-header {
     font-size: var(--type-heading-xxs-lh);
     font-weight: 700;
     text-align: center;
-    margin-bottom: 8px;
+    margin-bottom: var(--spacing-100);
 }
 
 main .mobile-fork-button .floating-button a.button:any-link {
