height set to 300px on home variant

--- a/express/code/blocks/template-x-carousel/template-x-carousel.css
+++ b/express/code/blocks/template-x-carousel/template-x-carousel.css
@@ -21,6 +21,10 @@
   margin-bottom: var(--spacing-800);
 }
 
+.template-x-carousel.home {
+  --template-height: 300px;
+}
+
 .template-x-carousel .toolbar {
   display: flex;
   flex-direction: column;
